update lib installs to not use requirements.txt

--- a/text_summarisier.ipynb
+++ b/text_summarisier.ipynb
@@ -65,7 +65,9 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install -r requirements.txt"
+        "!pip install PyInputPlus\n",
+        "!pip install spacy\n",
+        "!pip install pyperclip"
       ],
       "metadata": {
         "id": "48RNuGBQIHQ0"
