--- a/text_summarisier.ipynb
+++ b/text_summarisier.ipynb
@@ -189,8 +189,11 @@
         "    # Only works when run in local machine\n",
         "    try:\n",
         "      paste = get_clipboard_content()\n",
-        "    except PyperclipException as error:\n",
-        "      print(error)\n",
+        "    except pyperclip.PyperclipException as error:\n",
+        "      if 'could not find a copy/paste mechanism for your system' in str(error):\n",
+        "        print(\"Copy paste does not work on Google Colab. Must run in local machine to use this option\")\n",
+        "      else:\n",
+        "        print(error)\n",
         "    else:\n",
         "      print(summarise(paste))\n",
         "\n",
@@ -205,7 +208,7 @@
       "metadata": {
         "id": "K_gTp7SwfUV_"
       },
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -220,9 +223,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BSoIuzxcoZy2",
-        "outputId": "888d1d1f-82a8-4193-b8d7-2b6b5cb42b42"
+        "outputId": "77dce979-dbe8-403b-dce8-b5e3509dcfc9"
       },
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +236,7 @@
             "2. Load from file\n",
             "3. Exit\n",
             "2\n",
-            "Enter filename: notexist.txt\n",
+            "Enter filename: abc.txt\n",
             "Not a valid file.\n",
             "\n",
             "Enter filename: article.txt\n",
