add fix for spaCy issue #4577

--- a/text_summariser.ipynb
+++ b/text_summariser.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/mfaridn03/TextSummariser/blob/main/text_summarisier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "SmVEXRTA1wZn"
+      },
       "source": [
         "# Text Summarisation\n",
         "\n",
@@ -48,70 +36,78 @@
         "* Initialise a new PUBLIC GitHub repository, say called, text_summariser.\n",
         "* Import this notebook into the new repository\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "SmVEXRTA1wZn"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Install required libraries"
-      ],
       "metadata": {
         "id": "OmrFJ7Ydoqah"
-      }
+      },
+      "source": [
+        "# Install required libraries"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "48RNuGBQIHQ0"
+      },
+      "outputs": [],
       "source": [
         "!pip install PyInputPlus\n",
         "!pip install spacy\n",
         "!pip install pyperclip"
-      ],
-      "metadata": {
-        "id": "48RNuGBQIHQ0"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Import modules onto program"
-      ],
       "metadata": {
         "id": "Ema7w_eQo6aq"
-      }
+      },
+      "source": [
+        "Import modules onto program"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "hT-v5oCopD2r"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "import pyinputplus as pyip\n",
         "import pyperclip\n",
         "import spacy\n",
         "\n",
+        "\n",
         "# Initialising spacy\n",
-        "nlp = spacy.load(\"en_core_web_sm\")"
-      ],
-      "metadata": {
-        "id": "hT-v5oCopD2r"
-      },
-      "execution_count": null,
-      "outputs": []
+        "# https://github.com/explosion/spaCy/issues/4577\n",
+        "try:\n",
+        "    nlp = spacy.load(\"en_core_web_sm\")\n",
+        "except OSError:\n",
+        "    import en_core_web_sm\n",
+        "    nlp = en_core_web_sm.load()"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Writing some helper functions"
-      ],
       "metadata": {
         "id": "MsQAuqX_pMEu"
-      }
+      },
+      "source": [
+        "Writing some helper functions"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_XnRGpp3pEut"
+      },
+      "outputs": [],
       "source": [
         "# Get content from a valid file\n",
         "def get_file_content(filename: str):\n",
@@ -134,24 +130,24 @@
         "# local machine\n",
         "def get_clipboard_content():\n",
         "  return pyperclip.paste()"
-      ],
-      "metadata": {
-        "id": "_XnRGpp3pEut"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Summarise function"
-      ],
       "metadata": {
         "id": "arPV9U5Cpqvq"
-      }
+      },
+      "source": [
+        "Summarise function"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7igN8AnepuYo"
+      },
+      "outputs": [],
       "source": [
         "# Code is from tutorial lesson\n",
         "# Returns the first two sentence of the article as a very basic 'summary'\n",
@@ -159,24 +155,24 @@
         "  doc = nlp(string)\n",
         "  sentences = [sentence.text for sentence in doc.sents][:2]\n",
         "  return ' '.join(sentences)"
-      ],
-      "metadata": {
-        "id": "7igN8AnepuYo"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Main function"
-      ],
       "metadata": {
         "id": "JjvGO9_6qNvU"
-      }
+      },
+      "source": [
+        "Main function"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 65,
+      "metadata": {
+        "id": "K_gTp7SwfUV_"
+      },
+      "outputs": [],
       "source": [
         "def main():\n",
         "  choice = pyip.inputMenu(\n",
@@ -204,20 +200,11 @@
         "\n",
         "  else:\n",
         "    print(\"Exiting.\")"
-      ],
-      "metadata": {
-        "id": "K_gTp7SwfUV_"
-      },
-      "execution_count": 65,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "if __name__ == \"__main__\":\n",
-        "  main()\n",
-        "  "
-      ],
+      "execution_count": 67,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -225,11 +212,10 @@
         "id": "BSoIuzxcoZy2",
         "outputId": "77dce979-dbe8-403b-dce8-b5e3509dcfc9"
       },
-      "execution_count": 67,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Enter text input method:\n",
             "1. Paste from clipboard\n",
@@ -243,7 +229,27 @@
             "Perth's beautiful beaches are facing a new danger: shark attacks. Local surfers and swimmers are reporting a sudden rise in shark activity in recent weeks.\n"
           ]
         }
+      ],
+      "source": [
+        "if __name__ == \"__main__\":\n",
+        "  main()\n",
+        "  "
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
